<resources>
    <string name="app_name">Green Tea</string>
    <string name="skip">Skip</string>
    <string name="continues">Continue</string>
    <string name="greeting">Welcome to</string>
    <string name="introduction">Chè Xanh Đất Đỏ application brings you a sophisticated and rich traditional flavor experience through the neatest and fastest form!</string>
    <string name="button_experience">Application experience</string>
    <string name="button_register">Register Account</string>
    <string name="register_title">Register your account</string>
    <string name="register_desc">Enter your email and password to register</string>
    <string name="login_title">Login your account</string>
    <string name="login_desc">Enter your email and password to login</string>
    <string name="passwordInput">Password</string>
    <string name="passwordConfirmInput">Confirm Password</string>
    <string name="showPass">Show Password</string>
    <string name="foggotPass">Foggot Password?</string>
    <string name="login">Login Account</string>
    <string name="googleSocials">Or the way to sign in</string>
    <string name="tvCreateAccount">Don\'t have an account?</string>
    <string name="createAccount">Create Account</string>
    <string name="loginAccount">Already have an account?</string>
    <string name="tvLoginAccount">Login Account</string>
    <string name="security">I\'ve read and agreed to User Agreement and Privacy \nPolicy</string>
    <string name="fab_description">Opening Cart</string>
    <string name="home">Home</string>
    <string name="oder">Order</string>
    <string name="discount">Discount</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_chexanh">, Che Xanh...</string>
    <string name="customer">Customer</string>
    <string name="point">Point:</string>
    <string name="greeting_morning">Good morning!</string>
    <string name="greeting_afternoon">Good afternoon!</string>
    <string name="greeting_evening">Good evening!</string>
    <string name="greeting_night">Good night!</string>

</resources>