<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/started"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".StartActivity">

    <!--Button skip (bỏ qua)-->

    <VideoView
        android:id="@+id/layoutVideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- LinearLayout for the bottom row (Skip, Arrow, Continue) -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Button Skip (Bỏ qua) -->
        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_condensed"
            android:background="?attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/skip"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:gravity="start" />

        <!-- Arrow Icon -->
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow"
            android:layout_marginHorizontal="20dp" />

        <!-- Button Continue (Tiếp tục) -->
        <TextView
            android:id="@+id/txtContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_condensed"
            android:background="?attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/continues"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="end" />
    </LinearLayout>

    <!-- Arrow Icon (at the top center of the panel) -->

    <!-- Sliding Panel (initially positioned so the arrow is visible) -->

    <ImageView
        android:id="@+id/arrow_down"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow_down"
        app:layout_constraintBottom_toTopOf="@+id/sliding_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sliding_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <!-- Background for the panel (curved top) -->

        <!-- Welcome Text -->
        <View
            android:id="@+id/panel_background"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="@drawable/panel_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_semi_condensed"
            android:gravity="center"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="@id/panel_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Description Text -->
        <TextView
            android:id="@+id/welcome_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Chè Xanh Đất Đỏ"
            android:textColor="#19D866"
            android:textSize="30sp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:gravity="center"
            android:text="@string/introduction"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light_italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_2" />

        <!-- "Trải nghiệm ứng dụng" Button -->
        <Button
            android:id="@+id/experience_button"
            android:layout_width="363dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:paddingHorizontal="32dp"
            android:text="@string/button_experience"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text" />

        <!-- "Đăng ký tài khoản" Button -->
        <Button
            android:id="@+id/register_button"
            android:layout_width="363dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#FFFFFF"
            android:paddingHorizontal="32dp"
            android:text="@string/button_register"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/experience_button" />

        <!-- Contact Info -->
        <TextView
            android:id="@+id/contact_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hotline: 0979367847 - Email: chexanhdatdo@gmail.com"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>